Save BPM and encoder from ID3 tags to database.